Fixed margin issue on mobile. White space of hell

--- a/resources/assets/sass/partials/_ecom.scss
+++ b/resources/assets/sass/partials/_ecom.scss
@@ -120,11 +120,14 @@ input#expiry-year {
 	-webkit-appearance: none;
 }
 .mmyy {
-	margin-right: 10px;
+	margin-right: 0px;
 }
 .mmyy-label {
-	margin-right: 30px;
+	margin-right: 0px;
 	width: 25%;
+}
+.ecom-margin {
+	margin-right: 30px;
 }
 ::-webkit-input-placeholder { /* WebKit, Blink, Edge */
 color: $black;
@@ -240,7 +243,7 @@ color: $black;
 	 	font-size: 40px;
 	 }
 	.mmyy-label {
-		margin-right: 30px;
+		// margin-right: 30px;
 		// width: 100%;
 	}
 	 .ecom-qty-wrapper {
@@ -255,7 +258,7 @@ color: $black;
 		padding-right: 20px;
 	}
 	.mmyy-label {
-		margin-right: 30px;
+		// margin-right: 30px;
 		width: 100%;
 	}
 	.ecom-qty-wrapper {
